# MayaMelParser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/maya-mel/: Cargo.toml  README.md  build.rs
crates/maya-mel/src/: ast.rs  lexer.rs  lib.rs  syntax.rs
crates/maya-mel/src/maya/: full.rs  light.rs  mod.rs  model.rs  registry.rs  selective.rs  tests.rs
crates/maya-mel/src/parser/: decode.rs  light.rs  mod.rs
crates/maya-mel/src/parser/engine/: expr.rs  mod.rs  (+3 more)
crates/maya-mel/src/sema/: command_norm.rs  command_schema.rs  flow.rs  mod.rs  resolve.rs  scope.rs  tests.rs
crates/maya-mel/tests/: public_api.rs  significant_tokens.rs  streaming.rs
crates/mel-cli/: Cargo.toml  README.md
crates/mel-cli/src/: app.rs  args.rs  diagnostics.rs  main.rs  report.rs  tests.rs
crates/mel-cli/src/snapshots/: mel_cli__tests__lexer_unknown_char.snap  mel_cli__tests__lexer_unterminated_string.snap  mel_cli__tests__parser_missing_proc_param_name.snap  mel_cli__tests__parser_missing_ternary_colon.snap  mel_cli__tests__sema_boolean_alias_return.snap  mel_cli__tests__sema_for_in_binding_implicit.snap  mel_cli__tests__sema_local_proc_forward_reference.snap  mel_cli__tests__sema_local_proc_shell_forward_reference.snap  mel_cli__tests__sema_local_proc_shell_unresolved.snap  mel_cli__tests__sema_read_before_write_and_shadowing.snap  mel_cli__tests__sema_scripted_panel_flag_mode_span.snap  mel_cli__tests__sema_scripted_panel_flag_mode_span_tabbed.snap  mel_cli__tests__sema_scripted_panel_flag_mode_span_tabbed_crlf_inline.snap  mel_cli__tests__sema_typed_missing_value_return.snap  mel_cli__tests__sema_typed_return_type_mismatch.snap  mel_cli__tests__sema_typed_return_type_mismatch_via_call.snap  mel_cli__tests__sema_unresolved_variable.snap  mel_cli__tests__sema_var_init_comparison_type_mismatch_span.snap  mel_cli__tests__sema_var_init_type_mismatch.snap  mel_cli__tests__sema_var_init_type_mismatch_via_call.snap  mel_cli__tests__sema_void_return_value.snap  mel_inspect__tests__lexer_unknown_char.snap  mel_inspect__tests__lexer_unterminated_string.snap  mel_inspect__tests__parser_missing_proc_param_name.snap  mel_inspect__tests__parser_missing_ternary_colon.snap  mel_inspect__tests__sema_anim_layer_target.snap  mel_inspect__tests__sema_attribute_exists_two_args.snap  mel_inspect__tests__sema_boolean_alias_return.snap  mel_inspect__tests__sema_delete_selection_omission.snap  mel_inspect__tests__sema_eval_echo_single_script.snap  mel_inspect__tests__sema_filter_expand_explicit_list.snap  mel_inspect__tests__sema_for_in_binding_implicit.snap  mel_inspect__tests__sema_list_transforms_single_arg.snap  mel_inspect__tests__sema_local_proc_forward_reference.snap  mel_inspect__tests__sema_local_proc_shell_forward_reference.snap  mel_inspect__tests__sema_local_proc_shell_unresolved.snap  mel_inspect__tests__sema_move_target_tail.snap  mel_inspect__tests__sema_namespace_info_current.snap  mel_inspect__tests__sema_particle_query_target.snap  mel_inspect__tests__sema_poly_edit_uv_explicit_target.snap  (+21 more)
crates/mel-maya/: Cargo.toml  build.rs
crates/mel-maya/src/: full.rs  hybrid.rs  lib.rs  light.rs  model.rs  normalize.rs  registry.rs  selective.rs  specialize.rs  tests.rs  validate.rs
crates/mel-parser/: Cargo.toml
crates/mel-parser/src/: decode.rs  lib.rs  light.rs  parser.rs  remap.rs  tests.rs
crates/mel-parser/src/parser/: bareword.rs  cursor.rs  expr.rs  proc.rs  shell.rs  stmt.rs  support.rs
crates/mel-parser/src/tests/: commands.rs  decode.rs  diagnostics.rs  expressions.rs  light.rs  mod.rs  proc.rs
crates/mel-parser/tests/: significant_tokens.rs
crates/mel-sema/: Cargo.toml  build.rs
crates/mel-sema/src/: command_norm.rs  command_schema.rs  flow.rs  lib.rs  resolve.rs  scope.rs  tests.rs
(+157 files in other folders)
