[workspace]
members = [
    "crates/mel-syntax",
    "crates/mel-lexer",
    "crates/mel-cst",
    "crates/mel-ast",
    "crates/mel-parser",
    "crates/mel-sema",
    "crates/mel-maya",
    "crates/mel-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
