[workspace]
members = [
    "crates/maya-mel",
    "crates/mel-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/yamahigashi/MayaMelParser"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
