[package]
name = "maya-mel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Single-entry Autodesk Maya MEL parsing and analysis library."
readme = "README.md"
documentation = "https://docs.rs/maya-mel"
keywords = ["maya", "mel", "parser", "analysis"]
categories = ["parser-implementations"]

[dependencies]
encoding_rs = "0.8"
text-size = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
encoding_rs = "0.8"

[lints]
workspace = true
