[package]
name = "mel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ariadne = "0.5"
mel-parser = { path = "../mel-parser" }
mel-sema = { path = "../mel-sema" }
mel-syntax = { path = "../mel-syntax" }

[dev-dependencies]
insta = "1"

[lints]
workspace = true
