[package]
name = "mel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Command-line inspection tool for Autodesk Maya MEL parsing and analysis."
readme = "README.md"
keywords = ["maya", "mel", "cli", "parser"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "mel-inspect"
path = "src/main.rs"

[dependencies]
ariadne = "0.5"
clap = { version = "4.5", features = ["derive"] }
maya-mel = { version = "0.1.4", path = "../maya-mel" }

[dev-dependencies]
insta = "1"

[lints]
workspace = true
