[package]
name = "mel-maya"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mel-ast = { path = "../mel-ast" }
mel-parser = { path = "../mel-parser" }
mel-sema = { path = "../mel-sema" }
mel-syntax = { path = "../mel-syntax" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
