[package]
name = "mel-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
encoding_rs = "0.8"
mel-ast = { path = "../mel-ast" }
mel-lexer = { path = "../mel-lexer" }
mel-syntax = { path = "../mel-syntax" }

[lints]
workspace = true
