[package]
name = "mel-sema"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mel-ast = { path = "../mel-ast" }
mel-syntax = { path = "../mel-syntax" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
